[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"
authors = ["ViTaMiN-4iK"]
description = "High-performance data processing module for Python"
license = "MIT"
repository = "https://github.com/ViTaMiN-4iK/LR-9"
readme = "README.md"
keywords = ["performance", "data-processing", "pyo3"]
categories = ["science", "numerics"]

[lib]
name = "rust_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }

[package.metadata.maturin]
python-source = "python"